ParameterIndependent/Opt3.err
  File "OptimisationMethodQuart3.py", line 154
    def MoreInputs_Run(:
                       ^
SyntaxError: invalid syntax

real	0m0.051s
user	0m0.025s
sys	0m0.010s
